# FreeImageIcs

Wrappers/FreeImageIcsSharp/: AssemblyInfo.cs  FreeImageIcs.cs  FreeImageIcsInterop.cs  FreeImageIcsSharp.csproj  FreeImageIcsSharp.sln
trunk/: CMakeLists.txt  FreeImageIcs.sln  FreeImageIcs.sln.template  FreeImageIcs.vcproj  FreeImageIcs.vcproj.template  MakeTemplateBuildFiles.bat  Test.cpp  exports.def  exports_d.def
trunk/Debug/: BuildLog.htm
trunk/Release/: BuildLog.htm
trunk/Tests/: AllTests.c  CMakeLists.txt  CuTest.h  FreeImageIcs_Testing.cpp  FreeImageIcs_Tests.c  FreeImageIcs_Viewer.cpp  Tests.vcproj.template
trunk/cmake_modules/: FindFreeImageAlgorithms.cmake
trunk/include/: FreeImageIcs_IO.h  FreeImageIcs_MetaData.h  FreeImageIcs_Private.h  libics.h  libics_conf.h
trunk/libics-1.5.1/: INSTALL  Makefile.am  Makefile.bcc  Makefile.in  Makefile.vc  README  aclocal.m4  bootstrap.sh  config.h.in  configure  configure.in  libics.h  libics_binary.c  libics_conf.h  libics_data.c  libics_gzip.c  libics_history.c  libics_intern.h  libics_ll.h  libics_preview.c  libics_read.c  libics_sensor.c  libics_sensor.h  libics_test.c  libics_test.h  libics_top.c  libics_util.c  libics_write.c
trunk/libics-1.5.1/Documentation/: Credits.html  Documentation.html  Enums.html  Ics_DataRepresentation.html  Ics_Error.html  Ics_Header.html  Ics_ImelRepresentation.html  LowLevelFunctions.html  TopLevelFunctions.html  Usage.html  iexplorefix.css  index.html  libics.css
trunk/libics-1.5.1/autoconfmacros/: etr_string_strcasecmp.m4  etr_strings_strcasecmp.m4
trunk/libics-1.5.1/support/icsviewer/: readics.c  resource.h  viewer.c  writedib.c
trunk/libics-1.5.1/support/matlab/: README  icsread.c  icswrite.c  makefile
trunk/src/: FreeImageIcs_IO.cpp  FreeImageIcs_MetaData.cpp  FreeImageIcs_Private.cpp
